# delta-space

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  Dockerfile.api  Dockerfile.web  MVP-RESUMEN.md  package-lock.json  package.json  tsconfig.base.json
.cursor/rules/: delta-space-sam.mdc
.github/workflows/: ci.yml  railway-web-deploy.yml
apps/api/: .env.example  .gitignore  docker-compose.postgres.yml  env.embedded  package-lock.json  package.json  railway.json  tsconfig.build.json  tsconfig.json
apps/desktop/: LICENSE.md  PLAN-NODE-PORTABLE.md  README.md  installation.js  (+8 more)
apps/lan-p2p/: Cargo.toml
apps/lan-p2p/src/: codec.rs  identity.rs  main.rs  persistence.rs  protocol.rs  transfer_store.rs
docs/: CHECKLIST-FASE-2-MATCHING-CATALOGO.md  DESKTOP_BACKEND_EMBEDDED.md  DISENO-COTIZACION-DESDE-ESTUDIO-PRO.md  DISENO-FASE-2-MATCHING-CATALOGO-COTIZACION.md  DISENO-PLANTILLAS-Y-ADICIONALES-AUTOMATICOS.md  FASE-0-EXPLORADOR-SOLAR-PLAN.md  FASE-5-CONVIVENCIA-FV.md  FASE-GENERACION-MANUAL-ESTUDIO-FV.md  INSTALACION_DESARROLLADOR.md  INSTALACION_USUARIO.md  ITERACION-2-RESUMEN.md  PLAN-FASE-1-COTIZACION-PRO.md  PLAN-FASE-1-PLANTILLAS-PREDETERMINADAS.md  PLAN-FASE-2-MATCHING-CATALOGO.md  PLAN-IMPLEMENTACION-GENERACION-MANUAL.md  PLAN-VISTA-PREVIA-GRAFICOS-ESTUDIO-FV.md  PLAN-WEB-ESCRITORIO.md  REDISENO-ESTUDIO-FV-EXPLORADOR-SOLAR.md  REDISENO-FLUJO-ESTUDIO-FV.md
scripts/: build-supabase-direct-url.mjs  build-supabase-direct-url.ps1  collect-lan-directory-evidence.mjs  dump-excel-analysis.mjs  railway-push-db-env.mjs  start-local.bat  validate-series-local.ps1
(+712 files in other folders)
