[package]
name = "lan-p2p"
version = "0.1.0"
edition = "2021"
description = "Capa LAN libp2p (mDNS + request-response + gossipsub) para PVQ — proceso sidecar con control local TCP"
default-run = "lan-p2p"

[dependencies]
anyhow = "1"
futures = "0.3"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "mdns",
    "gossipsub",
    "request-response",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"

[[bin]]
name = "lan-p2p"
path = "src/main.rs"
